fixed weird errors, reformatted toggleVisibilityOfTodoLists()

--- a/react-frontend/src/TodoListDisplay.css
+++ b/react-frontend/src/TodoListDisplay.css
@@ -4,6 +4,12 @@
     overflow: hidden;
 
     transform-origin: top;
+
+    opacity: 0;
+    max-height: 0;
+    transform: scaleY(0);
+
+    transition: all 0.3s linear;
 }
 
 #all-active-todos-container.visible,
@@ -18,14 +24,11 @@
     transition: all 0.4s ease-in;
 }
 
+/* 
 #all-active-todos-container.hidden,
 #all-fulfilled-todos-container.hidden {
-    opacity: 0;
-    max-height: 0;
-    transform: scaleY(0);
 
-    transition: all 0.3s linear;
-}
+} */
 
 .todoEntry-container {
     display: flex;
